--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,13 @@
   justify-content: center;
 }
 
+.word-count {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 12px;
+}
+
 .selected {
   border: solid 2px #00b5f0;
   box-sizing: border-box;
