--- a/src/App.css
+++ b/src/App.css
@@ -127,3 +127,13 @@
   height: 80vh;
   overflow: scroll;
 }
+
+.scrapboard {
+  width: 100vw;
+  height: 100vh;
+}
+
+.item {
+  position: absolute;
+  pointer-events: all;
+}
