--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,10 @@
   height: 80vh;
   overflow: scroll;
 }
+.text-editor-card-summaries {
+  text-align: left;
+  list-style-type: none;
+}
 
 .scrapboard {
   width: 100vw;
